Add LICENSE (closes #3558)

--- a/configure.in
+++ b/configure.in
@@ -21,6 +21,10 @@ PACKAGE=dynacase-ckeditor-plugins
 AC_SUBST(APPNAME)
 APPNAME=CKEDITOR_PLUGINS
 ac_default_prefix=/usr/share/what
+
+LICENSE="http://docs.anakeen.com/licenses/anakeen-1.0/licence.html Licence Anakeen"
+AC_SUBST(LICENSE)
+
 AC_SUBST(PUBRULE)
 PUBRULE="$(pwd)/buildTools"
 AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
